--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5231,3 +5231,28 @@ ul.nav_menu_1 {
 .fs13{
     font-size:13px !important;
 }
+
+.add-details, .removed-details{
+   overflow-y: auto;
+   height: 100px;
+}
+
+#student_data_set_div{
+    overflowX: hidden;
+}
+
+.user_search_result_table{
+    width: 100%;
+    tbody, thead
+    {
+        display: block;
+    }
+    tbody
+    {
+       overflow-y: auto;
+       height: 390px;
+    }
+    td{
+      width: 10%;
+    }
+}
