--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_search.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_search.html
@@ -11,7 +11,6 @@
         <input type="button" id="btnConfirmUserSubNo" class="orange-button auto-width " value={% trans "No" %}>
       </div>
     </div>
-    <a class="close-reveal-modal">&#215;</a>
   </div>
 
 
@@ -21,30 +20,36 @@
   <div class="small-6 large-3 columns" style="margin-left: -6%">
     <div class="info-box hide" >
       <div class="row" >
-        <div class="member_info">Members <a class="fs13 hide show-details show-mem-link">[Show Details]</a>:
+        <div class="member_info">Members <a class="fs13 hide show-details show-mem-link">[Show Details]</a>: 
+          <a class="fs13 hide flush" onclick='request_user_confirmation("Are you sure you want to Cancel following requests? ")'>
+            <u>Flush</u>
+          </a>
           <div class="push-to-right fs13">
             <h3 class="mem-added-cnt inline-block-display ">0</h3> to be Added.<br/>
             <div class="add-details hide">
-              <small>Your are requesting to add: </small> <br/><i class="added-names"></i><br/>
+              <small>Request to add: </small> <br/><i class="added-names"></i><br/>
             </div>
             <h3 class="mem-removed-cnt inline-block-display">0</h3> to be Removed.
             <div class="removed-details hide">
-              <small>Your are requesting to remove: </small><br/><i class="removed-names"></i>
+              <small>Request to remove: </small><br/><i class="removed-names"></i>
             </div>
           </div>
         </div>
       </div>
       <hr/>
       <div class="row">
-        <div class="admin_info">Admins <a class="fs13 hide show-details show-adm-link">[Show Details]</a>:
+        <div class="admin_info">Admins <a class="fs13 hide show-details show-adm-link">[Show Details]</a>: 
+          <a class="fs13 hide flush" onclick='request_user_confirmation("Are you sure you want to Cancel following requests? ")'>
+            <u>Flush</u>
+          </a>
           <div class="push-to-right fs13">
             <h3 class="adm-added-cnt inline-block-display">0</h3> to be Added.<br/>
             <div class="add-details hide">
-              <small>Your are requesting to add: </small> <br/><i class="added-names"></i><br/>
+              <small>Request to add: </small> <br/><i class="added-names"></i><br/>
             </div>
             <h3 class="adm-removed-cnt inline-block-display">0</h3> to be Removed.
             <div class="removed-details hide">
-              <small>Your are requesting to remove: </small> <br/><i class="removed-names"></i>
+              <small>Request to remove: </small> <br/><i class="removed-names"></i>
             </div>
           </div>
         </div>
@@ -82,6 +87,11 @@
   var search_text_old = "";
   var mem_subscription_data = {'added': {}, 'removed': {}}
   var adm_subscription_data = {'added': {}, 'removed': {}}
+  var users_added_cnt;
+  var users_removed_cnt;
+  var adm_added_cnt;
+  var adm_removed_cnt;
+
 
   function toggle_details_box(dict_obj, classname){
     console.log(classname)
@@ -248,20 +258,40 @@
   })
 
 
+  function request_user_confirmation(msg){
+    $(".show-details").trigger('click')
+    // Open all details and hide links
+    $(".info-box").find('div').removeClass("hide").find('a').addClass("hide")
+
+    info_html = $(".info-box").html()
+    $(".info-box").addClass("hide")
+    $("#confirmUserSubscriptionModalLabel").html(msg + info_html);
+    $("#confirmUserSubscriptionModal")
+      .removeClass("medium").addClass("small")
+      .addClass("alert")
+      .foundation('reveal', 'open');
+
+  }
+
+  function flush_changes(){
+    if ($(this).parents('.member_info')){
+      console.log("a")
+    }
+    else{
+      console.log("c")
+    }
+  }
+
+
   $(document).on("click", ".submit-btn", function() {
+    if(users_added_cnt || users_removed_cnt || adm_added_cnt || adm_removed_cnt){
       lbl_msg = "Are you sure you want to proceed?"
-
-      // Open all details and hide links
-      $(".info-box").find('div').removeClass("hide").find('a').addClass("hide")
-      info_html = $(".info-box")[0].innerHTML
-      $(".info-box").addClass("hide")
-      $("#confirmUserSubscriptionModalLabel").html(lbl_msg + info_html);
-      $("#confirmUserSubscriptionModal")
-        .removeClass("medium").addClass("small")
-        .addClass("alert")
-        .foundation('reveal', 'open');
+      request_user_confirmation(lbl_msg)
+    }
+    else{
+      alert("Please Add and/or Remove any Users.")
+    }
   })
-
 
   function get_users_info(data_dict, fetch_key_only, fetch_added_info, fetch_length_only){
         add_or_remove = "removed"
@@ -430,7 +460,8 @@
       $(link_ele_class)
         .removeClass("hide")
         .addClass("show-details")
-        .removeClass("hide_details_box");
+        .removeClass("hide_details_box")
+        .next(".flush").removeClass("hide");
         if ($(info_box_class).find(".add-details").hasClass("hide")){
           $(link_ele_class).text("[Show Details]")
         }
@@ -439,7 +470,9 @@
         }
     }
     else{
-      $(link_ele_class).addClass("hide")
+      $(link_ele_class)
+        .addClass("hide")
+        .next(".flush").addClass("hide")
       // No need to add show-hide classes since the element itself is hidden
       $(info_box_class).find(".add-details").addClass("hide")
       $(info_box_class).find(".removed-details").addClass("hide")
