--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_search.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_search.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load cache %}
   <!-- Confirmation Seek Modal on Submit click -->
-  <div id="confirmUserSubscriptionModal" class="reveal-modal large radius" data-reveal data-alert>
+  <div id="confirmUserSubscriptionModal" class="reveal-modal large radius" data-options="close_on_background_click:false;close_on_esc:false;" data-reveal data-alert>
     <p id="confirmUserSubscriptionModalLabel"></p>
     <div class="row feeds_proceed">
       <div class="small-3 small-offset-3 columns">
@@ -21,7 +21,7 @@
     <div class="info-box hide" >
       <div class="row" >
         <div class="member_info">Members <a class="fs13 hide show-details show-mem-link">[Show Details]</a>: 
-          <a class="fs13 hide flush" onclick='request_user_confirmation("Are you sure you want to Cancel following requests? ")'>
+          <a class="fs13 hide flush" onclick='request_user_confirmation(false)'>
             <u>Flush</u>
           </a>
           <div class="push-to-right fs13">
@@ -39,7 +39,7 @@
       <hr/>
       <div class="row">
         <div class="admin_info">Admins <a class="fs13 hide show-details show-adm-link">[Show Details]</a>: 
-          <a class="fs13 hide flush" onclick='request_user_confirmation("Are you sure you want to Cancel following requests? ")'>
+          <a class="fs13 hide flush" onclick='request_user_confirmation(false)'>
             <u>Flush</u>
           </a>
           <div class="push-to-right fs13">
@@ -99,6 +99,7 @@
 
       if(users_to_be_added.length){
         $(classname).find(".add-details").removeClass("hide")
+        console.log("comingcoming" + users_to_be_added.join(', '))
         $(classname).find(".added-names").html(users_to_be_added.join(', '))
       }
       else{
@@ -258,11 +259,17 @@
   })
 
 
-  function request_user_confirmation(msg){
+  function request_user_confirmation(submit_call){
+
+    msg = "Are you sure you want to Cancel the following requests ?"
+    if(submit_call){
+      msg = "Are you sure you want to Proceed with the following requests ?"
+      $("#btnConfirmUserSubYes").attr("data-submit", true);
+    }
+
     $(".show-details").trigger('click')
     // Open all details and hide links
     $(".info-box").find('div').removeClass("hide").find('a').addClass("hide")
-
     info_html = $(".info-box").html()
     $(".info-box").addClass("hide")
     $("#confirmUserSubscriptionModalLabel").html(msg + info_html);
@@ -273,20 +280,10 @@
 
   }
 
-  function flush_changes(){
-    if ($(this).parents('.member_info')){
-      console.log("a")
-    }
-    else{
-      console.log("c")
-    }
-  }
-
 
   $(document).on("click", ".submit-btn", function() {
     if(users_added_cnt || users_removed_cnt || adm_added_cnt || adm_removed_cnt){
-      lbl_msg = "Are you sure you want to proceed?"
-      request_user_confirmation(lbl_msg)
+      request_user_confirmation(true)
     }
     else{
       alert("Please Add and/or Remove any Users.")
@@ -313,7 +310,8 @@
 
   //Confirm or Cancel Deletion
     $(document).on("click", "#btnConfirmUserSubYes", function() {
-
+      submit_call = $("#btnConfirmUserSubYes").attr("data-submit")
+      if(submit_call){
         users_to_be_mem = get_users_info(mem_subscription_data, false, true, false)
         users_to_be_adm = get_users_info(adm_subscription_data, false, true, false)
 
@@ -340,31 +338,47 @@
         if(users_not_to_be_adm.length > 0){
           remove_users(JSON.stringify(users_not_to_be_adm), 'True')
         }
+        update_checkbox_attrs(true)
+      }
+      else{
+        update_checkbox_attrs(false)
+      }
+      mem_subscription_data = {'added': {}, 'removed': {}}
+      adm_subscription_data = {'added': {}, 'removed': {}}
+      update_status_lbl()
+      $("#confirmUserSubscriptionModal").foundation('reveal', 'close');
 
-        $("#confirmUserSubscriptionModal").foundation('reveal', 'close');
-        update_checkbox_attrs()
-        mem_subscription_data = {'added': {}, 'removed': {}}
-        adm_subscription_data = {'added': {}, 'removed': {}}
-        update_status_lbl()
     });
 
 
-    function update_checkbox_attrs(){
+    function update_checkbox_attrs(maintain_checks){
       data_dicts = [mem_subscription_data, adm_subscription_data]
       $.each(data_dicts, function(ind, dict_obj){
         $.each(dict_obj["added"], function(i,v){
-          console.log("This is v: "+ v)
-          $("input[data-user-id='" + v + "']").attr("data-checked-status", true)
+          if(maintain_checks){
+            $("input[data-user-id='" + v + "']").attr("data-checked-status", true)
+          }
+          else{
+            $("input[data-user-id='" + v + "']").prop("checked", false)
+          }
         })
         $.each(dict_obj["removed"], function(i,v){
-          $("input[data-user-id='" + v + "']").attr("data-checked-status", false)
+          if(maintain_checks){
+            $("input[data-user-id='" + v + "']").attr("data-checked-status", false)
+          }
+          else{
+            $("input[data-user-id='" + v + "']").prop("checked", true)
+          }
         })
       })
     }
 
     $(document).on("click", "#btnConfirmUserSubNo", function() {
+        $(".info-box")
+          .removeClass("hide")
+          .find('div').removeClass("hide")
+          .find('a').removeClass("hide")
         $("#confirmUserSubscriptionModal").foundation('reveal', 'close');
-        $(".info-box").removeClass("hide")
     });
 
   // [Tricky] Method to handle change events of all checkboxes
@@ -372,11 +386,17 @@
 
     // based on attribute 'data-user-admin', 
     // define on which dict object to alter
-    subscription_user_type = mem_subscription_data
-
+    // Its open
+    // if($(detail_box_type).find("hide_details_box")){
+    // }
 
     if ($(chk_ele).attr('data-user-admin') == 'True'){
       subscription_user_type = adm_subscription_data
+      detail_box_class = ".admin_info"
+    }
+    else{
+      detail_box_class = ".member_info"
+      subscription_user_type = mem_subscription_data
     }
     checked_val = $(chk_ele).attr('data-checked-status')
     username_val = $(chk_ele).attr('data-user-name')
@@ -385,9 +405,11 @@
     if(checked_val){
       if(!($(chk_ele).is(':checked'))){
         // If user is ALREADY member/admin, and we are removing him/her
+        console.log("1")
         subscription_user_type["removed"][username_val] = user_id_val
       }
       else{
+        console.log("2")
         // On state reset
         delete subscription_user_type['removed'][username_val]
       }
@@ -396,13 +418,17 @@
     else{
       if($(chk_ele).is(':checked')){
         // If user is NOT member/admin, and we are adding him/her
+        console.log("3")
         subscription_user_type["added"][username_val] = user_id_val
       }
       else{
         // On state reset, i.e an non-member/admin, was added and then unchecked by user before submit
+        console.log("4")
         delete subscription_user_type['added'][username_val]
       }
     }
+    toggle_details_box(subscription_user_type, detail_box_class)
+
     update_status_lbl()
   }
 
@@ -459,14 +485,13 @@
     if(added_cnt || removed_cnt){
       $(link_ele_class)
         .removeClass("hide")
-        .addClass("show-details")
-        .removeClass("hide_details_box")
         .next(".flush").removeClass("hide");
-        if ($(info_box_class).find(".add-details").hasClass("hide")){
-          $(link_ele_class).text("[Show Details]")
+        if ($(info_box_class).find(".add-details").hasClass("hide") && $(info_box_class).find(".removed-details").hasClass("hide")){
+          $(link_ele_class).text("[Show Details]").addClass("show-details").removeClass("hide_details_box")
+
         }
         else{
-          $(link_ele_class).text("[Hide Details]")
+          $(link_ele_class).text("[Hide Details]").removeClass("show-details").addClass("hide_details_box")
         }
     }
     else{
