--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/sform.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/sform.html
@@ -2,20 +2,51 @@
 {% block title %} Elastic Search {% endblock %}
 {% block body_content %}
 
+<script type="text/javascript">
+	document.getElementById("search_text").style.display = "none";
+	document.getElementById("groupbox").style.display = "none";
+	document.getElementById("search-submit").style.display = "none";
+</script>
+
 <style>
 	ul.errorlist {display: none;}
 	h3 {text-align:center;}
 	p {text-align:center;}
 	div.pagination {display: block; width: 10%; margin: 0 auto; }
+	#grid {width: 200px; padding-top: 5px;}
+	#selid {width: 200px; padding-top: 5px}
+	#but {padding-top: 10px; margin-right: 0}
+	#fs {padding-top: 5px; width:200px;}
 </style>
 
 <div class="form_class"> 
 	<form action="" method="get">
 	<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
     <li>{{form.query}}</li>
-    <li>{{form.group}}</li>
-    <li>{{form.select}}</li>
-    <li><input type="submit" value="Search" /></li>
+    <li id="grid">
+    <select name="group">
+    	{% for grname in grp %}
+    		{% ifequal grname grpnam %}
+    			<option value="{{grname}}" selected="selected">{{grpnam}}</option>
+    		{% else %}
+    			<option value="{{grname}}">{{grname}}</option>
+    		{% endifequal %}
+    	{% endfor %}
+    </select>
+    </li>
+    <li id="fs">{{form.search_select}}</li>
+    <br />
+    <div id="filter">
+	    <input type="checkbox" name="checks[]" value="all" /> All
+		<input type="checkbox" name="checks[]" value="Author" /> Users
+		<input type="checkbox" name="checks[]" value="image" /> Images
+		<input type="checkbox" name="checks[]" value="video" /> Video
+	    <input type="checkbox" name="checks[]" value="text" /> Text
+	    <input type="checkbox" name="checks[]" value="audio" /> Audio
+	    <input type="checkbox" name="checks[]" value="Page" /> Page
+	    <input type="checkbox" name="checks[]" value="Group" /> Courses
+    </div>
+    <li id="but"><input type="submit" value="Search" /></li>
     </ul>
     </form>
 </div> 
@@ -29,7 +60,7 @@
 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
 {% for c in content %}
 	<li class="card-image-wrapper">
-	{% include 'ndf/card_gsearch.html' with node=c %}
+	{% include "ndf/card_group.html" with node=c %}
 	</li>
 {% endfor %}
 </ul>
@@ -41,10 +72,9 @@
 		  {% ifequal num content.number %}
 		    <span class="current"><b>{{ num }}</b></span>
 		  {% else %}
-		    <a href="?page={{ num }}&query={{ request.GET.query }}&group={{ request.GET.group }}&select={{ request.GET.select }}">{{ num }}</a>
+		    <a href="?page={{ num }}&query={{ request.GET.query }}&group={{ request.GET.group }}&select={{ request.GET.select }}&search_select={{ request.GET.search_select }}{{ append_to_url }}">{{ num }}</a>
 		  {% endifequal %} 
 		{% endfor %}
 	</span>
 </div>
-
 {% endblock %}
