Added detailed view and search support for triplesearch

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/sform.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/sform.html
@@ -15,10 +15,15 @@
 	div.pagination {display: block; width: 10%; margin: 0 auto; }
 	#grid {width: 200px; padding-top: 5px;}
 	#selid {width: 200px; padding-top: 5px}
-	#but {padding-top: 10px; margin-right: 0}
-	#fs {padding-top: 5px; width:200px;}
+	#but {padding-top: 10px; float: right;}
+	#filter {
+		/*float: left;*/
+		padding-top: 5px;
+	}
+	#ss {
+		padding-top: 5px; width:200px;
+	}
 </style>
-
 <div class="form_class"> 
 	<form action="" method="get">
 	<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
@@ -34,11 +39,10 @@
     	{% endfor %}
     </select>
     </li>
-    <li id="fs">{{form.search_select}}</li>
-    <br />
+    <li id="ss">{{form.search_select}}</li>
     <div id="filter">
 	    <input type="checkbox" name="checks[]" value="all" /> All
-		<input type="checkbox" name="checks[]" value="Author" /> Users
+	    <input type="checkbox" name="checks[]" value="Author" /> Users
 		<input type="checkbox" name="checks[]" value="image" /> Images
 		<input type="checkbox" name="checks[]" value="video" /> Video
 	    <input type="checkbox" name="checks[]" value="text" /> Text
@@ -63,12 +67,13 @@
 
 <div>
 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
-{% for c in content %}
+{% for each in content %}
 	<li class="card-image-wrapper">
-	{% include "ndf/card_gsearch.html" with node=c %}
-	</li>
+	{% include "ndf/card_gsearch.html" with node=each url_name="node_detail" first_arg=each.group_set.0 second_arg=each.id %}
+	</li> 
 {% endfor %}
 </ul>
+
 </div>
 
 <div class="pagination">
