--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_gsearch.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_gsearch.html
@@ -3,11 +3,7 @@
 
 <a href="{% url 'node_detail' first_arg second_arg %}">
 <div class="unit_card">
-    {% comment %}
-    <div class="unit_status in-progress-status">
-        In-progress
-    </div>
-    {% endcomment %}
+    
     <div class="status-draft">DRAFT</div>
 
     <div class="unit_header">
@@ -17,25 +13,9 @@
     <div class="unit_desc">
         {{node.content}}
     </div>
-    {% comment %}
-    <div class="unit_breif">
-        <div class="unit_breif_row">
-            <i class="fa fa-list-ul"></i>
-                3 of 6 lessons Complete
-        </div>
-        <div class="unit_breif_row">
-            <i class="fa fa-calendar"></i>
-                2 Weeks
-        </div>
-        <div class="unit_breif_row">
-            <i class="fa fa-user"></i>
-                5 Students Enrolled
-        </div>
-    </div>
-    {% endcomment %}
-
+    
      <div class="unit_actions">
-            <span>{{node.id}}</span></a>
+        <span>{{node.id}}</span>
     </div> 
  </div>
  </a>
