--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcollection_ajax_view.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcollection_ajax_view.html
@@ -69,8 +69,7 @@
             css_ids.push(node.id)
           }
           $li.find('.jqtree-title').attr('data-id',node.id);
-          if (node.node_type == "CourseUnitEvent" || node.node_type == "lesson"){
-          // if (node.node_type == "Page" || node.node_type == "File"  || node.node_type == "QuizItemEvent" ) {
+          if (node.node_type == "CourseUnit" ||  node.node_type == "CourseUnitEvent" || node.node_type == "lesson"){
             cu_ids.push(node.id)
             if (node.collection_set && node.collection_set.length > 0 ){
               cr_ids = cr_ids.concat(node.collection_set)
