provision to add another version of site logo: GSTUDIO_SITE_SECONDARY_LOGO

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -793,7 +793,7 @@ h5{
     }
 
     .loggedin-user {
-        background: #505e6c;
+        # background: #505e6c;
         border-radius: 100%;
         height: 45px;
         width: 45px;
