--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -12,7 +12,7 @@
             <li class="name show-for-medium-up">
                 <a class="loggedin-user" href="{% url 'landing_page' %}">
                 
-                <img src="/static/ndf/images/clix-header-icon.png">
+                <img src="{{site.SECONDARY_LOGO}}">
                 </a>
             </li>
             <li class="name hide-for-medium-up">
