--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -667,7 +667,7 @@ h5 {
 }
 /* line 795, ../../../scss/_clix2017.scss */
 #menu_bar_gstudio .loggedin-user {
-  background: #505e6c;
+  # background: #505e6c;
   border-radius: 100%;
   height: 45px;
   width: 45px;
